Interface de cadastro de questoes utilizando o ui:composition

--- a/quiz_game/WebContent/template.xhtml
+++ b/quiz_game/WebContent/template.xhtml
@@ -11,12 +11,13 @@
 		</h:head>
 	</ui:insert>
 	<ui:insert name="logo">
-		<!-- TODO: Logo -->
+		<!-- TODO: Logo -->Logo.
 	</ui:insert>
 	<ui:insert name="body">
+	Defina o corpo
 	</ui:insert>
 	<ui:insert name="foot">
-		<!-- TODO: Foot -->
+		<!-- TODO: Foot -->Footer
 	</ui:insert>
 </f:view>
 </html>
