Acertos na entidade de quiz para que a referencia das questoes estejam concretizadas atraves da entidade QuestionMapping

--- a/quiz_game/WebContent/template.xhtml
+++ b/quiz_game/WebContent/template.xhtml
@@ -11,7 +11,7 @@
 		</h:head>
 	</ui:insert>
 	<ui:insert name="logo">
-		<!-- TODO: Logo -->Logo.
+		<!-- TODO: Logo -->
 	</ui:insert>
 	<ui:insert name="body">
 	Defina o corpo
