--- a/quiz_game/WebContent/quiz.xhtml
+++ b/quiz_game/WebContent/quiz.xhtml
@@ -8,26 +8,48 @@
 <f:view>
 	<ui:composition template="/template.xhtml">
 		<ui:define name="body">
+			<h:head>
+			
+				<style>
+				.choice-link {
+					padding: 10px;
+					width: 90%;
+				}
+				</style>
+				<script type="text/javascript">
+					function modifyClass(button) {
+						jQuery(function($){
+							$('.choice-link').removeClass('ui-state-active')
+							$(button).addClass('ui-state-active');
+						});
+					}
+				</script>
+			</h:head>
 			<body>
 				<p:panel>
 					<h:outputText value="Quantidade questoes: " /><h:outputText value="#{quizController.questionCount}" />
 					<h:outputText value="Questoes acertadas: " /><h:outputText value="#{quizController.acertosCount}" />
 				</p:panel>
-				<h:form id="actualQuestion" prependId="false">
+				<h:form id="actualQuestion" >
 					<p:panel header="Questão #{quizController.questionCount}">
 						<h:outputText value="#{quizController.actualQuestion.descricao}" />
 						<p:dataGrid value="#{quizController.actualQuestion.choices}"
 							var="choice" columns="1">
-							<p:commandButton value="#{choice.descricao}">
-								<f:setPropertyActionListener
-									target="#{quizController.questionMapping.alternativaSelecionada}"
-									value="#{choice.idAlternativa}" />
-							</p:commandButton>
+							<p:column>
+								<p:commandLink ajax="true" value="#{choice.descricao}" styleClass="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only choice-link" onclick="modifyClass(this);" >
+									<f:setPropertyActionListener
+										target="#{quizController.actualMapping.alternativaSelecionada}"
+										value="#{choice.idAlternativa}" />
+								</p:commandLink>
+								
+								
+							</p:column>
 						</p:dataGrid>
 					</p:panel>
 					<p:panel style="text-align:right;">
 						<p:commandButton value="Próximo" update="actualQuestion"
-							action="#{quizController.nextQuestion}" />
+							action="#{quizController.nextQuestion}" rendered="#{!quizController.lastQuestion}"/>
+						<p:commandButton value="Finalizar o jogo!" rendered="#{quizController.lastQuestion}"/>
 					</p:panel>
 				</h:form>
 			</body>
