Commit para fazer request

--- a/quiz_game/WebContent/template.xhtml
+++ b/quiz_game/WebContent/template.xhtml
@@ -11,13 +11,14 @@
 		</h:head>
 	</ui:insert>
 	<ui:insert name="logo">
-		<!-- TODO: Logo -->
+		<div class="logo-text">
+			<h:outputText value="BioQuiz (º ³ º)"/>
+		</div>
 	</ui:insert>
 	<ui:insert name="body">
 	Defina o corpo
 	</ui:insert>
 	<ui:insert name="foot">
-		<!-- TODO: Foot -->Footer
 	</ui:insert>
 </f:view>
 </html>
