Alteracoes de 22/05/2012 feitas pelo welliton

--- a/quiz_game/WebContent/template.xhtml
+++ b/quiz_game/WebContent/template.xhtml
@@ -12,7 +12,8 @@
 	</ui:insert>
 	<ui:insert name="logo">
 		<div class="logo-text">
-			<h:outputText value="BioQuiz (º ³ º)"/>
+			<h:outputText value="BioQuiz"/>
+			<h:graphicImage library="images" name="leaf.png" />
 		</div>
 	</ui:insert>
 	<ui:insert name="body">
