Projeto em etapa de implantacao

--- a/quiz_game/WebContent/index.xhtml
+++ b/quiz_game/WebContent/index.xhtml
@@ -58,33 +58,28 @@
 						<p:fieldset legend="Idealizadores">
 							<h:panelGrid columns="3">
 								<h:panelGrid columns="2">
-									<h:graphicImage library="images" name="lito.jpg" />
+									<h:graphicImage library="images" name="lucy.jpg" />
 									<p class="about-developer">
-										<span class="bold"> Wélliton de Souza: </span>trabalha com
-										desenvolvimento de sistemas para análise de sequencias
-										genéticas na UNESP - Rio Claro-SP. Atualmente cursando o
-										último ano de Bacharelado em Sistemas de Informação na
-										Fundação Hermínio Ometto - UNIARARAS
+										<span class="bold"> Lucylli Alves do Santos: </span>
+										Atualmente cursando o terceiro ano de Bacharelado e
+										Licenciatura em Ciências Biológicas na Fundação Hermínio
+										Ometto - UNIARARAS
 									</p>
 								</h:panelGrid>
 								<h:panelGrid columns="2">
-									<h:graphicImage library="images" name="lito.jpg" />
+									<h:graphicImage library="images" name="fabi.jpg" />
 									<p class="about-developer">
-										<span class="bold"> Wélliton de Souza: </span>trabalha com
-										desenvolvimento de sistemas para análise de sequencias
-										genéticas na UNESP - Rio Claro-SP. Atualmente cursando o
-										último ano de Bacharelado em Sistemas de Informação na
-										Fundação Hermínio Ometto - UNIARARAS
+										<span class="bold"> Fabiani Souza Gomes: </span>Atualmente
+										cursando o terceiro ano de Bacharelado e Licenciatura em
+										Ciências Biológicas na Fundação Hermínio Ometto - UNIARARAS
 									</p>
 								</h:panelGrid>
 								<h:panelGrid columns="2">
-									<h:graphicImage library="images" name="lito.jpg" />
+									<h:graphicImage library="images" name="reanan.jpg" />
 									<p class="about-developer">
-										<span class="bold"> Wélliton de Souza: </span>trabalha com
-										desenvolvimento de sistemas para análise de sequencias
-										genéticas na UNESP - Rio Claro-SP. Atualmente cursando o
-										último ano de Bacharelado em Sistemas de Informação na
-										Fundação Hermínio Ometto - UNIARARAS
+										<span class="bold"> Renan Francisco Oliveira: </span>Atualmente
+										cursando o terceiro ano de Bacharelado e Licenciatura em
+										Ciências Biológicas na Fundação Hermínio Ometto - UNIARARAS
 									</p>
 								</h:panelGrid>
 							</h:panelGrid>
